--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-<center><h1>welcome to the unfinished website of the reborn SOS brigade!</h1></center>
+<!DOCTYPE html>
+<html>
+<head>  
+<link rel="shortcut icon" href="SOSdan.png" type="image/x-icon">
+<style>
+body {
+  background-image: url('url.jpg');
+}
+.title{
+        color: yellow;
+        background-color:black;
+        text-shadow:10px;
+}       
+</style>
+<center><h1 class = "title">welcome to the unfinished website of the reborn SOS brigade!</h1></center>                          
 <br> <br> <br> <br> <br> <br> <br>
-<p>access counter: </p> <script type="text/javascript" src="//counter.websiteout.net/js/22/0/0/1"></script>
+<p>access counter: </p> <script type="text/javascript" src="//counter.websiteout.net/js/22/0/0/1"></script>  
