--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="shortcut icon" href="SOSdan.png" type="image/x-icon">
 <style>
 body {
-  background-image: url('url.jpg');
+  background-image: url('background.jpg');
 }
 .title{
         color: yellow;
