--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>  
 <link rel="shortcut icon" href="SOSdan.png" type="image/x-icon">
+<meta charset="UTF-8">
 <style>
 body {
   background-image: url('background.jpg');
