--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 <br> <br> <br> <br> <br> <br> <br>
-<p class = "right">access counter: </p> <script type="text/javascript" src="//counter.websiteout.net/js/22/0/0/1"></script>  
+<p>access counter: </p> <script type="text/javascript" src="//counter.websiteout.net/js/22/0/0/1"></script>  
 </body>
 </html>
