--- a/information.html
+++ b/information.html
@@ -17,5 +17,7 @@
 <h3 class = "text center">It's also better than being paranoid or watching any news and</h3>
 <h3 class = "text center">wasting your energy.</h3> <br><br>
 <h3 class = "text center">That's all you need to know</h3>
-</body>
+  <br><br>
+<h3 class = "text center">Oh and SOS stands for "S"aving the world by "O"verloading it with fun with "S"pecial powers</h3>
+</body
 </html>
