--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
  <div class="navbar">
-  <a href="information.html">information</a>
+  <a href="keydata.html">key data</a>
   <div class="SOSacts">
       <button class="SOSact">SOS brigade activities
       <i class="fa fa-caret-down"></i>
