--- a/keydata.html
+++ b/keydata.html
@@ -9,7 +9,7 @@
 <body>
 <button class="play-music left button bstyle1 buttonblue">Play bg music</button>
 <button class="stop-music left button bstyle1 buttonred">Stop bg music</button>
-<a href = "index.html"><button class="left button bstyle1 buttongreen">Return</button></a>
+<a href = "https://13sos.github.io/"><button class="left button bstyle1 buttongreen">Return</button></a>
 <h1 class = "title center">Information on the reborn SOS brigade!</h1>
 <h2 class = "sectitle center">I want to have fun and explore the "world's possibilities"</h2>
 <h3 class = "text center">If you don't understand at least realize it's better than being depressed and</h3>
