--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>                
 <button class="play-music left button bstyle1 buttonblue">Play bg music</button> 
 <button class="stop-music left button bstyle1 buttonred">Stop bg music</button>
-<a href = "index.html"><button class="left button bstyle1 buttongreen">Return</button></a>
+<a href = "https://13sos.github.io/"><button class="left button bstyle1 buttongreen">Return</button></a>
 <h1 class = "title center">Do you have an interesting thing to talk about?!</h1>
 <h3 class = "text center">Maybe an irregular situation most people would call you crazy</h3>  
 <h3 class = "text center">for talking about? Or an idea? Well what you can do is simple:</h3>  
