--- a/keydata.html
+++ b/keydata.html
@@ -9,7 +9,7 @@
 <body>
 <button class="play-music left button bstyle1 buttonblue">Play bg music</button>
 <button class="stop-music left button bstyle1 buttonred">Stop bg music</button>
-<a href = "https://13sos.github.io/"><button class="left button bstyle1 buttongreen">Return</button></a>
+<a href = "https://13sos.github.io"><button class="left button bstyle1 buttongreen">Return</button></a>
 <h1 class = "title center">Information on the reborn SOS brigade!</h1>
 <h2 class = "sectitle center">I want to have fun and explore the "world's possibilities"</h2>
 <h3 class = "text center">If you don't understand at least realize it's better than being depressed and</h3>
@@ -19,5 +19,6 @@
 <h3 class = "text center">That's all you need to know</h3>
   <br><br>
 <h3 class = "text center">Oh and SOS stands for "S"aving the world by "O"verloading it with fun with "S"pecial powers</h3>
+<h3 class = "text center">Yeah very slight difference from the SOS in a series about a certain Haruhi Suzumiya.</h3>
 </body
 </html>
