--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.1/howler.min.js" integrity="sha512-L6Z/YtIPQ7eU3BProP34WGU5yIRk7tNHk7vaC2dB1Vy1atz6wl9mCkTPPZ2Rn1qPr+vY2mZ9odZLdGYuaBk7dQ==" crossorigin="anonymous"></script>
 <button class="play-music left button bstyle1 buttonblue">Play bg music</button>
 <button class="stop-music left button bstyle1 buttonred">Stop bg music</button>
-<center><h1 class = "title ">welcome to the (unofficial) SOS brigade's website!</h1></center>  
+<center><h1 class = "title ">welcome to the 13 SOS brigade's website!</h1></center>  
 <script src="music.js"></script>
 </head>
 <body>
