key data on the 13SOS brigade

--- a/keydata.html
+++ b/keydata.html
@@ -5,20 +5,54 @@
 <link rel = "shortcut icon" href = "SOSdan.png" type = "image/x-icon"> 
 <meta charset="UTF-8">
 <script src="music.js"></script>
+<script src="main.js"></script>
 </head>
 <body>
 <button class="play-music left button bstyle1 buttonblue">Play bg music</button>
 <button class="stop-music left button bstyle1 buttonred">Stop bg music</button>
-<a href = "https://13sos.github.io"><button class="left button bstyle1 buttongreen">Return</button></a>
-<h1 class = "title center">Information on the reborn SOS brigade!</h1>
-<h2 class = "sectitle center">I want to have fun and explore the "world's possibilities"</h2>
-<h3 class = "text center">If you don't understand at least realize it's better than being depressed and</h3>
-<h3 class = "text center">doing useless things all day while chatting about someone's ass.</h3>
+<a href = "index.html"><button class="left button bstyle1 buttongreen">Return</button></a>
+<h1 class = "title center">Key data on the 13SOS brigade!</h1>
+<h2 class = "sectitle center">I want to have fun</h2>
+<h3 class = "text center">Hey, it's better than</h3>
+<h3 class = "text center">doing useless things all day.</h3><br>
 <h3 class = "text center">It's also better than being paranoid or watching any news and</h3>
 <h3 class = "text center">wasting your energy.</h3> <br><br>
-<h3 class = "text center">That's all you need to know</h3>
-  <br><br>
-<h3 class = "text center">Oh and SOS stands for "S"aving the world by "O"verloading it with fun with "S"pecial powers</h3>
-<h3 class = "text center">Yeah very slight difference from the SOS in a series about a certain Haruhi Suzumiya.</h3>
-</body
+<h3 class = "text center">I have founded the 13SOS brigade on the date of May 18th</h3>
+<br><br><br>
+<h3 class = "text center">13SOS stands for 13=Ra, many interpretations can</h3>
+<h3 class = "text center">be made but you could say 13 stands for "sun", so</h3>
+<h3 class = "text center">the full acronym is: let's say:</h3>
+<h3 class = "text center">Sun "S"aving the world by "O"verloading it with fun </h3>
+<h3 class = "text center">with "S"pecial powers.</h3>
+<h3 class = "text center">Now what does this acronym mean?</h3>
+<h3 class = "text center">Well it's your choice, and I may at some point offer hints,</h3>
+<h3 class = "text center">which you can use for fun interpretations,</h3>
+<h3 class = "text center">superposition is allowed!</h3>
+<h3 class = "text center">Now: I feel like making a 13SOS symbolic things copy&paste:</h3>
+<center><input type="text" value="13" id="myInput">
+<div class="tooltip">
+<button onclick="copyfunc()" onmouseout="outFunc()">
+  <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
+  Copy text
+  </button>
+</div>
+
+<br>
+<input type="text" value="Ra Saving the world by Overloading it with fun with Special powers" id="myInput">
+<div class="tooltip">
+<button onclick="copyfunc()" onmouseout="outFunc()">
+  <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
+  Copy text
+  </button>
+</div>
+ 
+<br>
+<input type="text" value="13SOS" id="myInput">
+<div class="tooltip">
+<button onclick="copyfunc()" onmouseout="outFunc()">
+  <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
+  Copy text
+  </button>
+</div></center>
+</body>
 </html>
