key data on the 13SOS brigade

--- a/keydata.html
+++ b/keydata.html
@@ -38,7 +38,7 @@
 </div>
 
 <br>
-<input type="text" value="Ra Saving the world by Overloading it with fun with Special powers" id="myInput">
+<input type="text" value="Sun Saving the world by Overloading it with fun with Special powers" id="myInput">
 <div class="tooltip">
 <button onclick="copyfunc()" onmouseout="outFunc()">
   <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
