--- a/log.html
+++ b/log.html
@@ -11,7 +11,10 @@
 <button class="stop-music left button bstyle1 buttonred">Stop bg music</button>
 <a href = "index.html"><button class="left button bstyle1 buttongreen">Return</button></a>
 <h1 class = "title center">Welcome to the 13SOS brigade's log!</h1>
-
+	
+<h2 class = "sectitle center">The Brigade log has been made! I'll try to update it sometimes</h2>   
+<br><br>
+	
 <h2 class = "sectitle center">25.05.2021</h2>
 	<h3 class = "text center">I am officialy naming this "classified information day"</h3>
 	<br>
