--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="SOSacts-content">
-      <a href="">brigade log - not available yet</a> <!--SOS brigade games, jorunal, lessons and more are ideas I have-->
+      <a href="log.html">brigade log</a> <!--SOS brigade games, jorunal, lessons and more are ideas I have-->
       <a href="">not available yet</a>
     </div>
   </div>
