--- a/log.html
+++ b/log.html
@@ -19,11 +19,9 @@
 	<h3 class = "text center">I am officialy naming this "classified information day"</h3>
 	<br>
 <h2 class = "sectitle center">23.05.2021 - founding day II</h2>
-	<h3 class = "text center">I changed the name to 13SOS brigade as in the end if you</h3>  
-	<h3 class = "text center">think about my idea of a Haruhi Suzumiya series inspired</h3>
-	<h3 class = "text center">organization I am pretty sure what made the SOS brigade</h3>
-	<h3 class = "text center">in it special was in a way it's uniqueness, therefore you could</h3>
-	<h3 class = "text center">call this the true date this was founded.</h3>
+	<h3 class = "text center">I changed the name to 13SOS brigade for special</h3>  
+	<h3 class = "text center">reasons you get bonus points for understanding.</h3>
+	<h3 class = "text center">you could call this the true date this was founded.</h3>
 	<br>
 <h2 class = "sectitle center">18.05.2021 - founding day</h2>
 	<h3 class = "text center">on this day I founded the as I initially</h3> 
