--- a/log.html
+++ b/log.html
@@ -5,6 +5,7 @@
 <link rel = "shortcut icon" href = "SOSdan.png" type = "image/x-icon"> 
 <meta charset="UTF-8">
 <script src="music.js"></script>
+<script src="main.js"></script>
 </head>
 <body>                
 <button class="play-music left button bstyle1 buttonblue">Play bg music</button> 
