--- a/log.html
+++ b/log.html
@@ -7,7 +7,8 @@
 <script src="music.js"></script>
 <script src="main.js"></script>
 </head>
-<body>                
+<body>  
+<button onclick="topFunction()" id="scrollupBtn" title="Go to top">Top</button> 
 <button class="play-music left button bstyle1 buttonblue">Play bg music</button> 
 <button class="stop-music left button bstyle1 buttonred">Stop bg music</button>
 <a href = "index.html"><button class="left button bstyle1 buttongreen">Return</button></a>
