--- a/keydata.html
+++ b/keydata.html
@@ -5,7 +5,6 @@
 <link rel = "shortcut icon" href = "SOSdan.png" type = "image/x-icon"> 
 <meta charset="UTF-8">
 <script src="music.js"></script>
-<script src="main.js"></script>
 </head>
 <body>
 <button onclick="topFunction()" id="scrollupBtn" title="Go to top">Top</button> 
@@ -35,7 +34,7 @@
 <button onclick="copyfunc()" onmouseout="outFunc()">
   <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
   Copy text
-  </button>
+  </button><button onclick="topFunction()" id="scrollupBtn" title="Go to top">Top</button> 
 </div>
 
 <br>
@@ -55,5 +54,6 @@
   Copy text
   </button>
 </div></center>
+ <script src="main.js"></script>
 </body>
 </html>
