--- a/log.html
+++ b/log.html
@@ -16,7 +16,14 @@
 <h2 class = "sectitle center">The Brigade log has been made! I'll try to update it sometimes</h2>   
 <br><br>
 	
-<h2 class = "sectitle center">25.05.2021</h2>
+
+<h2 class = "sectitle center">28.10.2021</h2>
+	<h3 class = "text center">As I have now remembered this project perhaps I shall</h3>
+	<h3 class = "text center">return to it, at least giving it it's own https domain.</h3>	
+	<h3 class = "text center">Until that possible day however check out this game I once</h3>
+	<h3 class = "text center">made on an old github account inspired by the grand</h3>
+	<h3 class = "text center">adventure of the SOSdan: <a href = "https://github.com/EmpereurRa/Galactic-conflict">link</a> </h3>
+<h2 class = "sectitle center">25.05.2021 </h2>
 	<h3 class = "text center">I am officialy naming this "classified information day"</h3>
 	<br>
 <h2 class = "sectitle center">23.05.2021 - founding day II</h2>
